# ecoprompt

./: .gitignore  Dockerfile  README.md  example.py  main.py  pyproject.toml
app/api/v1/: routers.py
app/api/v1/endpoints/: chat.py  evaluate.py  pdf.py  train.py
app/core/: concurrency.py  config.py  queue_manager.py
app/models/: embedding_model.py  llm_client.py  llm_loader.py  load_for_rag.py  mongodb_loader.py  prompt_template.py  vectordb_loader.py
app/schemas/: chat.py  evaluate.py  train.py
app/services/: chat.py  chat_with_vllm.py  define_pdf_style.py  dpo_train.py  embed_data_in_qdrant.py  evaluate.py  find_in_vectordb.py  load_dpo_datasets.py  model_download.py  model_evaluate.py  routing.py  save_to_mongodb.py  train.py  use_mongodb.py  use_tools.py
llm-test/: llama_bllossom_gguf_test.ipynb  midm_mini_awq.ipynb  midm_mini_gguf.ipynb
tests/: about_s3.py  awq_model_download.py  llama_cpp_stream.py  llama_cpp_test.py  lm-evaluation-harness.md  rag_ex.py  test_chat_vllm.py  test_concurrent_requests.py  test_evaluate.py  test_inference.py  test_train_endpoint.py  test_vllm.py  upload_model_to_hf.py
training/: code_fine_tuning.py  code_fine_tuning_qlora.py  dpo_fine_tuning.py  dpo_fine_tuning_with_peft.py  load_datasets.py  load_training_datasets.py  lora_fine_tuning.py  save_merged_model.py
