[project]
name = "ecoprompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.1",
    "datasets==4.1.1",
    "fastapi>=0.119.0",
    "gensim>=4.4.0",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-mongodb>=0.7.1",
    "langchain-qdrant>=1.1.0",
    "math-verify>=0.8.0",
    "matplotlib>=3.10.7",
    "peft>=0.17.1",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.3",
    "qdrant-client>=1.15.1",
    "torch>=2.8.0",
    "sentence-transformers>=5.1.2",
    "trl>=0.24.0",
    "vllm==0.10.2",
    "wandb>=0.22.2",
    "llama-cpp-python>=0.3.16",
    "dnspython>=2.8.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
